--- a/assets/sass/modules/_home-page.scss
+++ b/assets/sass/modules/_home-page.scss
@@ -10,9 +10,9 @@
     padding: 2rem 0;
     position: relative;
 
-    @include mq(lt) { padding: 4rem 0; }
-    @include mq(md) { padding: 8rem 0; }
-    @include mq(l) { padding: 13rem 0; }
+    @include mq(lt) { padding: 4rem 0; margin-bottom: 2rem; }
+    @include mq(md) { padding: 8rem 0; margin-bottom: 4rem; }
+    @include mq(l) { padding: 13rem 0; margin-bottom: 7rem; }
 
     &:after {
       background: url('../images/ts_redesign/home_hero.jpg') left top no-repeat;
